[gd_scene load_steps=3 format=3 uid="uid://cvs4ne2bwqmgo"]

[ext_resource type="Script" path="res://Board.gd" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="3"]

[node name="Main" type="Node2D"]
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 400.0
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2

[node name="Board" type="GridContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("1")

[node name="VBoxContainer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -152.0
offset_right = 50.0
offset_bottom = -52.0

[node name="NextBlock" type="GridContainer" parent="HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("1")

[node name="Score" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 0
offset_top = 193.0
offset_right = 100.0
offset_bottom = 207.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 70.0
offset_right = 31.5
offset_bottom = 86.0
focus_mode = 0
max_value = 10.0
value = 5.0
rounded = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.17

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Speed" to="." method="_on_HSlider_value_changed"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
